--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,10 @@ a.active hr{
           color: white;
      }
 }
+
+@layer utilities {
+     .required::after {
+          content: ' *';
+          color: red;
+     }
+}
